--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m unittest discover -s . -p "test_calculator.py"
+          python -m pytest discover -s . -p "test_calculator.py"
 
   deploy:
     needs: test
